<resources>
    <string name="app_name">My Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Accueil</string>
    <string name="menu_gallery">A Propos</string>
    <string name="menu_slideshow">Competences</string>
    <string name="menu_service">Services</string>
    <string name="menu_realisation">Realisations</string>
    <string name="menu_contact">Contacts</string>
</resources>