<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_baseline_cast_for_education_24"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_service"
            android:icon="@drawable/ic_baseline_design_services_24"
            android:title="@string/menu_service" />
        <item
            android:id="@+id/nav_realisation"
            android:icon="@drawable/ic_baseline_developer_board_24"
            android:title="@string/menu_realisation" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_baseline_contacts_24"
            android:title="@string/menu_contact" />
    </group>
</menu>